# reason

./: .gitattributes  .gitignore  LICENSE.md  README.md  play.py
python/: ffi.py  game.py  network.py  training.py  utils.py
python/config/: training.yaml
python/data/: example.py  imitation.py  logistello.py  utils.py  wthor.py
python/src/: ffi.py  game.py  network.py  training.py
python/src/config/: training.yaml
python/src/data/: example.py  imitation.py  logistello.py  utils.py  wthor.py
resources/: README.md
resources/cassio/: ._Solitaires
resources/cassio/Solitaires/: Solitaires.jou  Solitaires.trn  Solitaires_1.pzz  Solitaires_10.pzz  Solitaires_11.pzz  Solitaires_12.pzz  Solitaires_13.pzz  Solitaires_14.pzz  Solitaires_15.pzz  Solitaires_16.pzz  Solitaires_17.pzz  Solitaires_18.pzz  Solitaires_19.pzz  Solitaires_2.pzz  Solitaires_20.pzz  Solitaires_21.pzz  Solitaires_22.pzz  Solitaires_23.pzz  Solitaires_24.pzz  Solitaires_25.pzz  Solitaires_26.pzz  Solitaires_27.pzz  Solitaires_28.pzz  Solitaires_29.pzz  Solitaires_3.pzz  Solitaires_30.pzz  Solitaires_31.pzz  Solitaires_32.pzz  Solitaires_33.pzz  Solitaires_34.pzz  Solitaires_35.pzz  Solitaires_36.pzz  Solitaires_37.pzz  Solitaires_38.pzz  Solitaires_39.pzz  Solitaires_4.pzz  Solitaires_40.pzz  Solitaires_41.pzz  Solitaires_42.pzz  Solitaires_43.pzz  (+22 more)
resources/checkpoints/: graceful-sun-90-ep54.ckpt  rare-fog-112-ep130.ckpt
resources/ffo/: 13_14.txt  15_16.txt  17_18.txt  19_20.txt  21_22.txt
resources/preprocessed/: logistello.npy  wthor.npy
resources/wthor/: WTHOR.JOU  WTHOR.TRN  WTH_1977.wtb  WTH_1978.wtb  WTH_1979.wtb  WTH_1980.wtb  WTH_1981.wtb  WTH_1982.wtb  WTH_1983.wtb  WTH_1984.wtb  WTH_1985.wtb  WTH_1986.wtb  WTH_1987.wtb  WTH_1988.wtb  WTH_1989.wtb  WTH_2001.wtb  WTH_2002.wtb  WTH_2003.wtb  WTH_2004.wtb  WTH_2005.wtb  WTH_2006.wtb  WTH_2007.wtb  WTH_2008.wtb  WTH_2009.wtb  WTH_2010.wtb  WTH_2011.wtb  WTH_2012.wtb  WTH_2013.wtb  WTH_2014.wtb  WTH_2015.wtb  WTH_2016.wtb  WTH_2017.wtb  WTH_2018.wtb  WTH_2019.wtb  WTH_2020.wtb
rust/: Cargo.toml
rust/reason-othello/: Cargo.toml  README.md
rust/reason-othello/benches/: perft.rs
rust/reason-othello/src/: bitboard.rs  board.rs  ffi.rs  game.rs  lib.rs  location.rs  utils.rs
rust/reason-othello/src/test_utils/: ffo.rs  mod.rs  perft.rs  play.rs
rust/reason-player/: Cargo.toml
rust/reason-player/src/: endgame.rs  lib.rs  mcts.rs  network.rs
rust/reason-player/src/connectors/: connector.rs  desdemona.rs  mod.rs
rust/reason-player/tests/: ffo.rs
rust/reason-solver/: Cargo.toml
rust/reason-solver/src/: lib.rs  search.rs
rust/reason-solver/tests/: ffo.rs
solver/: Cargo.toml  README.md
solver/benches/: perft.rs
solver/src/: board.rs  lib.rs
solver/src/test_utils/: ffo.rs  mod.rs  perft.rs
solver/tests/: perft.rs
