[package]
name = "solver"
version = "0.1.0"
authors = ["Aidan Swope <aidanswope@gmail.com>"]
edition = "2018"

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"]}

[[bench]]
name = "perft"
harness = false

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"