[package]
name = "reason-othello"
version = "0.1.0"
authors = ["Aidan Swope <aidanswope@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"]}

[[bench]]
name = "perft"
harness = false