[package]
name = "reason-player"
version = "0.1.0"
authors = ["Aidan Swope <aidanswope@gmail.com>"]
edition = "2018"

[dependencies]
reason-othello = { path = "../reason-othello"}
arrayvec = "0.5.2"
tch = "0.4.0"
itertools = "0.10.0"
ndarray-npy = {version = "0.8.0", default-features = false}
ndarray = "0.15.1"
glob = "0.3.0"

[dev-dependencies]
indicatif = "0.15.0"